# POXsimu

./: .gitignore  CMakeLists.txt  README.md  magneticField.cxx  rootlogon.C  vis.mac
Analysis/: Analysis.C  CMakeLists.txt  DAQ.C  GenFitMinimalExample.cc  magneticField.cxx  modifiedExample.cxx  oldMagneticField.cxx
include/: CMakeLists.txt  DetectorConstruction.hh
macros/: CMakeLists.txt  drawgeometry.C  drawtgeometry.C  geo.mac  geo_4x7.mac  run.mac  run_savewrl.mac  vis.mac
src/: CMakeLists.txt  DetectorConstruction.cc
useful_commands/: CMakeLists.txt  cmake_and_compile.sh  pennyShow.sh  run.sh  show_events.sh  show_geometry.sh
